--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,7 @@
-[images]
-  remote_images = ["https://source.unsplash.com/.*", "https://images.unsplash.com/.*", "https://ext.same-assets.com/.*", "https://ugc.same-assets.com/.*"]
-
+# netlify.toml
 [build]
-  command = "bun run build"
-  publish = ".next"
+  command   = "npm run build"
+  publish   = ".next"
 
 [build.environment]
   NEXT_USE_NETLIFY_EDGE = "true"
