--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextjs-shadcn",
   "version": "0.1.0",
@@ -6,8 +7,8 @@
     "dev": "next dev -H 0.0.0.0 --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "bunx biome lint --write && bunx tsc --noEmit",
-    "format": "bunx biome format --write"
+    "lint": "npx biome lint --write && npx tsc --noEmit",
+    "format": "npx biome format --write"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
